--- a/essays.css
+++ b/essays.css
@@ -82,19 +82,15 @@ h3
  }
 
  h5
- {
-    font-family: 'Leky Calgria',Arial, sans-serif;
-    font-weight: normal;
-    color: #1d1d1f;
-    font-size: 20PX;
-    text-align: center;
-    position: relative;
-    top: 2%;
-    left: 0%;
-    transform: translateY(-30%);
-   
+{
+    font-family: sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    color: #faf9f6;
     
- }
+    
+
+}
 
 
 h4
@@ -128,21 +124,29 @@ html
     padding: 0; 
 }
 
-body
-{
-    background: #eee9e4;
-    
+
+body {
+    background: rgb(198, 162, 133);
+    background: linear-gradient(
+        0deg,
+        rgba(198, 162, 133, 1) 0%,
+        rgba(240, 236, 232, 1) 100%
+    );
     background-repeat: no-repeat;
     background-attachment: fixed;
-    
-    font-family: 'Montserrat-Regular';
-    min-height: 1000px;
+    font-size: 100%;
+    font-family: z;
     overflow-x: hidden;
-    
-
+    padding-bottom: auto;
 }
 
-
+section
+{
+    width: 100%;
+    float: left;
+    height: 100vh;
+    position: relative;
+}
 
 
 
@@ -251,7 +255,7 @@ b {
     background-image: linear-gradient(
         hsl(0 17% 16% / 0),
         hsl(20 17% 16% / 0.3) 20%,
-         hsl(0 17% 16% / 1)), url("Images/pexels-tranmautritam-326514.jpg");
+         hsl(0 17% 16% / 1)), url("Images/pexels-pew-nguyen-239548.jpg");
   
     
     height: 100%;
@@ -264,15 +268,16 @@ b {
   }
     
    
-    .hero-text 
-    {
-      text-align: center;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: whitesmoke;
-    }
+  .hero-text 
+  {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: whitesmoke;
+  }
+  
     
   
   
@@ -304,20 +309,12 @@ b {
     margin-bottom: 20px;
 }
 
-.container p:first-child {
-    margin-top: 0;
-}
-
-.container::before,
-.container::after {
-    content: "";
-    flex-grow: 300;
-}
 
 :root {
     --clr-neutral-900: hsl(17, 19%, 10%);
     --clr-neutral-100: hsl(0, 0%, 100%);
     --clr-neutral-400: hsl(97, 6%, 59%);
+    --clr-accent-400: hsl(0, 0%, 0%); /* Update with desired color */
 }
 
 *,
@@ -327,17 +324,16 @@ b {
 }
 
 .card {
-    transform: translateY(-50%);
-color: #f5f5ff;
-background-image: url(Images/pexels-picjumbocom-196645.jpg);
-background-size: cover;
-padding: 10rem 0 0;
-max-width: 38ch;
-border-radius: 0.5em;
-overflow: hidden;
-margin: 0 auto 60px auto;
-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-
+    transform: translateY(50%);
+    color: #f5f5ff;
+    background-image: url(Images/pexels-pew-nguyen-239548.jpg);
+    background-size: cover;
+    padding: 10rem 0 0;
+    max-width: 40ch;
+    border-radius: 0.5em;
+    overflow: hidden;
+    margin: 0 auto 40px auto;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .card-content {
@@ -353,7 +349,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 .card-heading {
     position: relative;
     width: max-content;
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .card-heading::after {
@@ -364,6 +360,12 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     bottom: 0;
     width: calc(100% + var(--padding));
     background: var(--clr-accent-400);
+}
+
+.card-frame {
+    text-indent: 0px;
+    display: flex;
+    text-align: left;
 }
 
 .button {
@@ -386,7 +388,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
 .row .column {
     float: left;
-    width: 20%;
+    width: 50%;
 }
 
 .row:after {
@@ -394,9 +396,6 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     display: table;
     clear: both;
 }
-
-  
-
    
 footer{
     position: absolute;
